# python-project-lvl4

./: .codeclimate.yml  .gitignore  Makefile  Procfile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/locale/ru/LC_MESSAGES/: django.mo  django.po
labels/migrations/: 0001_initial.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  create_base.html  delete.html  delete_base.html  delete_label.html  delete_status.html  index.html  labels.html  messages.html  signup.html  statuses.html  task_delete.html  task_detail.html  tasks.html  update_base.html  update_status.html  users.html
task_manager/templates/labels/: create_label.html  delete_label.html  labels.html  update_label.html
task_manager/templates/statuses/: create_status.html  delete_status.html  statuses.html  update_status.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_detail.html  task_update.html
task_manager/templates/users/: create_user.html  delete_user.html  login.html  update_user.html  users.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels.py  0003_alter_task_name.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+6 files in other folders)
