[tool.poetry]
name = "hexlet-code"
version = "0.1.5"
description = ""
authors = ["sinist3rr <darkfloki@protonmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
python-dotenv = "^0.17.1"
gunicorn = "^20.1.0"
django-bootstrap4 = "^2.3.1"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.812"
django-stubs = "^1.8.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
